--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,13 @@
-h1 {
- color: blue;
+.container {
+   display: flex;
+ flex-direction: column;
+ height: 100vh;
+ width: 100%;
+ justify-content: flex-center;
+ align-items: flex-center;
+}
 
+h1 {
+ font-sze: 24px;
+ font-weight: bold
 }
